--- a/12_images.kv
+++ b/12_images.kv
@@ -14,12 +14,18 @@
         Image: 
             source: './images/interior_2.jpg'
             allow_stretch: True 
-            keep_ratio: False
+            keep_ratio: True 
+
         
         # GIF images do not work 
         # Image: 
         #     source: './images/ipaaad.gif'
-
+        #     center: self.parent.center 
+        #     size: 200, 300
+        #     allow_stretch: True 
+        #     anim_delay: -1 
+        #     anim_loop: 1
+        #     anim_reset: True
 
         # Button:
         #     text: "Hello World!"
